--- a/contacto.html
+++ b/contacto.html
@@ -100,12 +100,20 @@
 
     <!-- FORMULARIO -->
     <div class="form-card">
-     <form id="contactForm">
-  <input type="text" name="nombre" id="nombre" placeholder="Tu nombre" required />
-  <input type="email" name="email" id="email" placeholder="Tu correo" required />
-  <textarea name="mensaje" id="mensaje" placeholder="Escribe tu mensaje" required></textarea>
-  <button type="submit">Enviar</button>
+    <form id="formContacto">
+
+  <input class="input" type="text" name="name" placeholder="Nombre completo" required>
+  <input class="input" type="email" name="email" placeholder="Correo electrónico" required>
+  <input class="input" type="text" name="empresa" placeholder="Empresa (opcional)">
+  <input class="input" type="text" name="telefono" placeholder="Teléfono (opcional)">
+  <textarea name="mensaje" placeholder="Escribe tu consulta..." required></textarea>
+
+  <button id="btnEnviarContacto" class="btn" type="submit" style="background:#0D3B66;color:#fff;">
+    Enviar
+  </button>
+
 </form>
+
 
 <p id="statusMsg"></p>
 
