--- a/contacto.html
+++ b/contacto.html
@@ -98,22 +98,14 @@
 
   <div style="display:grid;grid-template-columns:1fr 360px;gap:22px;margin-top:18px">
 
-    <!-- FORMULARIO -->
+<!-- FORMULARIO -->
     <div class="form-card">
-    <form id="formContacto">
-
-  <input class="input" type="text" name="name" placeholder="Nombre completo" required>
-  <input class="input" type="email" name="email" placeholder="Correo electrónico" required>
-  <input class="input" type="text" name="empresa" placeholder="Empresa (opcional)">
-  <input class="input" type="text" name="telefono" placeholder="Teléfono (opcional)">
-  <textarea name="mensaje" placeholder="Escribe tu consulta..." required></textarea>
-
-  <button id="btnEnviarContacto" class="btn" type="submit" style="background:#0D3B66;color:#fff;">
-    Enviar
-  </button>
-
+     <form id="contactForm">
+  <input type="text" name="nombre" id="nombre" placeholder="Tu nombre" required />
+  <input type="email" name="email" id="email" placeholder="Tu correo" required />
+  <textarea name="mensaje" id="mensaje" placeholder="Escribe tu mensaje" required></textarea>
+  <button type="submit">Enviar</button>
 </form>
-
 
 <p id="statusMsg"></p>
 
