--- a/contacto.html
+++ b/contacto.html
@@ -17,39 +17,65 @@
   <style>
     .header-top { background:#000; color:#fff; padding:18px 0 10px; }
     .brand-row { display:flex; align-items:center; gap:18px; }
-    .logo-circle { width:96px; height:96px; border-radius:50%; display:flex; align-items:center; justify-content:center; border:4px solid rgba(205,170,109,0.95); box-shadow:0 6px 18px rgba(0,0,0,0.35); overflow:hidden; }
+    .logo-circle {
+      width:96px; height:96px; border-radius:50%;
+      display:flex; align-items:center; justify-content:center;
+      border:4px solid rgba(205,170,109,0.95);
+      box-shadow:0 6px 18px rgba(0,0,0,0.35);
+      overflow:hidden;
+    }
     .logo-circle img { width:78%; }
     .brand-title h1 { margin:0; font-size:30px; color:#CDAA6D; font-weight:700; }
     .brand-title p { margin:0; color:#fff; opacity:.95; font-size:14px; }
+
     .menu-row { background:#fff; border-bottom:3px solid #2E86C1; }
     .menu-row .nav-link { color:#000; font-weight:600; padding:10px 12px; }
     .menu-row .nav-link:hover { color:#2E86C1; }
 
-    .site-footer { background:#000; color:#CDAA6D; padding:22px 0; margin-top:30px; }
+    .site-footer {
+      background:#000; color:#CDAA6D;
+      padding:22px 0; margin-top:30px;
+    }
 
-    .form-card { background:#fff; padding:20px; border-radius:10px; border:1px solid #ddd; box-shadow:0 4px 12px rgba(0,0,0,0.07); }
-    .input, textarea { width:100%; padding:10px; margin-bottom:12px; border:1px solid #ccc; border-radius:6px; }
+    .form-card {
+      background:#fff;
+      padding:20px;
+      border-radius:10px;
+      border:1px solid #ddd;
+      box-shadow:0 4px 12px rgba(0,0,0,0.07);
+    }
+
+    .input, textarea {
+      width:100%; padding:10px; margin-bottom:12px;
+      border:1px solid #ccc; border-radius:6px;
+    }
+
     textarea { min-height:120px; }
-
-    /* estético: que el boton sea ancho y destaque */
-    #btnEnviarContacto { width:100%; background:#0D3B66; color:#fff; border:none; padding:10px 14px; border-radius:6px; }
   </style>
 </head>
+
 <body>
 
-<!-- HEADER (igual que siempre) -->
+<!-- HEADER -->
 <header class="header-top">
   <div class="container">
     <div class="brand-row">
-      <div class="logo-circle"><img src="assets/img/logo.png" alt="Jurix & Sistem logo"></div>
-      <div class="brand-title"><h1>JURIX & SISTEM S.A.S.</h1><p>CONSULTORÍAS</p></div>
+      <div class="logo-circle">
+        <img src="assets/img/logo.png" alt="Jurix & Sistem logo">
+      </div>
+      <div class="brand-title">
+        <h1>JURIX & SISTEM S.A.S.</h1>
+        <p>CONSULTORÍAS</p>
+      </div>
     </div>
   </div>
+
   <div class="menu-row">
     <div class="container">
       <nav class="d-flex justify-content-center align-items-center py-2">
         <a class="nav-link" href="index.html">Inicio</a>
         <a class="nav-link" href="nosotros.html">Nosotros</a>
+
         <div class="nav-item dropdown mx-2">
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Servicios</a>
           <ul class="dropdown-menu">
@@ -57,6 +83,7 @@
             <li><a class="dropdown-item" href="tecnologicos.html">Tecnológicos</a></li>
           </ul>
         </div>
+
         <a class="nav-link" href="clientes.html">Clientes</a>
         <a class="nav-link" href="equipo.html">Nuestro Equipo</a>
         <a class="nav-link" href="contacto.html">Contacto</a>
@@ -65,50 +92,85 @@
   </div>
 </header>
 
+<!-- CONTENIDO -->
 <main class="container">
   <h2 style="color:var(--azul)">Contáctanos</h2>
 
   <div style="display:grid;grid-template-columns:1fr 360px;gap:22px;margin-top:18px">
 
-    <!-- FORM -->
+<!-- FORMULARIO -->
     <div class="form-card">
-      <!-- note: no action attr. JS enviará a Google Apps Script -->
-      <form id="contactForm" novalidate>
-        <input class="input" type="text" name="nombre" id="nombre" placeholder="Nombre completo" required>
-        <input class="input" type="email" name="email" id="email" placeholder="Correo electrónico" required>
-        <input class="input" type="text" name="empresa" id="empresa" placeholder="Empresa (opcional)">
-        <input class="input" type="text" name="telefono" id="telefono" placeholder="Teléfono (opcional)">
-        <textarea name="mensaje" id="mensaje" placeholder="Escribe tu consulta..." required></textarea>
+     <form id="contactForm">
+  <input type="text" name="nombre" id="nombre" placeholder="Tu nombre" required />
+  <input type="email" name="email" id="email" placeholder="Tu correo" required />
+  <textarea name="mensaje" id="mensaje" placeholder="Escribe tu mensaje" required></textarea>
+  <button type="submit">Enviar</button>
+</form>
 
-        <button id="btnEnviarContacto" type="submit">Enviar</button>
-        <div id="statusMsg" style="margin-top:10px;font-size:0.95rem;"></div>
-      </form>
+<p id="statusMsg"></p>
+
+<script>
+const scriptURL = "https://script.google.com/macros/s/AKfycbx0c2VZMQAoqAeuF3EXLrIH4kZHN8t3Fey-RWv13bY-wRb81E7LlopHwy8hTqk2mB0/exec";
+
+document.getElementById("contactForm").addEventListener("submit", async (e) => {
+  e.preventDefault();
+
+  const data = {
+    nombre: document.getElementById("nombre").value,
+    email: document.getElementById("email").value,
+    mensaje: document.getElementById("mensaje").value
+  };
+
+  const status = document.getElementById("statusMsg");
+  status.innerText = "Enviando...";
+
+  try {
+    const res = await fetch(scriptURL, {
+      method: "POST",
+      mode: "no-cors",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(data)
+    });
+
+    status.innerText = "¡Mensaje enviado con éxito!";
+    document.getElementById("contactForm").reset();
+
+  } catch (err) {
+    status.innerText = "Error al enviar. Intenta nuevamente.";
+  }
+});
+</script>
+
     </div>
 
-    <!-- DATOS -->
-    <div>
-      <div class="container my-3" style="font-size:1.1rem; text-align:justify;">
-        <p><i class="fa-solid fa-location-dot" style="margin-right:6px;"></i> Calle 120 No. 31-86 — Barranquilla, Colombia</p>
-        <p><i class="fa-solid fa-envelope" style="margin-right:6px;"></i> jurixsistemsas@outlook.com</p>
-        <p><i class="fa-solid fa-envelope-circle-check" style="margin-right:6px;"></i> jurixsistemsas.contacto@gmail.com</p>
-        <p><i class="fa-brands fa-whatsapp" style="margin-right:6px;"></i> +57 3012564208</p>
-      </div>
+    <!-- DATOS DE CONTACTO -->
+    <div class="container my-4" style="font-size:1.1rem;">
+      <p><i class="fa-solid fa-location-dot"></i> Calle 120 No. 31-86 — Barranquilla, Colombia</p>
+      <p><i class="fa-solid fa-envelope"></i> jurixsistemsas@outlook.com</p>
+      <p><i class="fa-solid fa-envelope-circle-check"></i> jurixsistemsas.contacto@gmail.com</p>
+      <p><i class="fa-brands fa-whatsapp"></i> +57 3012564208</p>
     </div>
 
   </div>
 </main>
+
 
 <!-- MODAL ÉXITO -->
 <div class="modal fade" id="modalSuccess" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content" style="border:0; border-radius:12px;">
       <div class="modal-body text-center p-4">
-        <p style="font-size:18px; font-weight:600; margin:0;">✅ Tu mensaje ha sido enviado exitosamente.</p>
-        <button id="btnCerrarModalSuccess" type="button" class="btn mt-4" style="background:#0D3B66; color:#fff;">Cerrar</button>
+        <p style="font-size:18px; font-weight:600; margin:0;">
+          ✅ Tu mensaje ha sido enviado exitosamente.
+        </p>
+        <button id="btnCerrarModalSuccess" type="button" class="btn mt-4" style="background:#0D3B66; color:#fff;">
+          Cerrar
+        </button>
       </div>
     </div>
   </div>
 </div>
+
 
 <!-- FOOTER -->
 <footer class="site-footer">
@@ -118,110 +180,25 @@
   </div>
 </footer>
 
-<script>document.getElementById("year").textContent = new Date().getFullYear();</script>
+<script>
+document.getElementById("year").textContent = new Date().getFullYear();
+</script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-/* ---------- CONFIGURA: pega la URL de tu WebApp de Google aquí ---------- */
-const SCRIPT_URL = "TU_SCRIPT_URL_AQUI"; // <- reemplaza por la URL de tu Apps Script
-/* ---------------------------------------------------------------------- */
-
-(function(){
-  const form = document.getElementById('contactForm');
-  const btn  = document.getElementById('btnEnviarContacto');
-  const status = document.getElementById('statusMsg');
-
-  function setStatus(text, error = false){
-    status.textContent = text;
-    status.style.color = error ? "#b02a37" : "#0d6efd";
+document.addEventListener("DOMContentLoaded", () => {
+  const params = new URLSearchParams(window.location.search);
+  if (params.get("sent") === "true") {
+    const modal = new bootstrap.Modal(document.getElementById("modalSuccess"));
+    modal.show();
   }
 
-  function validar(){
-    const nombre = document.getElementById('nombre').value.trim();
-    const email  = document.getElementById('email').value.trim();
-    const mensaje= document.getElementById('mensaje').value.trim();
-    return nombre && email && mensaje;
-  }
-
-  form.addEventListener('submit', async function(e){
-    e.preventDefault();
-
-    if(!validar()){
-      alert("Por favor completa Nombre, Correo y Mensaje antes de enviar.");
-      return;
-    }
-
-    btn.disabled = true;
-    btn.textContent = "Enviando...";
-    setStatus("Enviando mensaje...");
-
-    // Usamos FormData para mantener tus nombres de campo actuales
-    const fd = new FormData(form);
-
-    try {
-      // Intento principal: fetch normal (si tu WebApp tiene CORS configurado correctamente)
-      const res = await fetch(SCRIPT_URL, {
-        method: 'POST',
-        body: fd,
-        // mode: 'cors'  // si habilitas CORS en Apps Script, descomenta
-      });
-
-      // Si tu WebApp no responde con CORS habilitado entonces res.ok puede ser falso o inaccesible.
-      // Para compatibilidad máxima, si la respuesta es OK -> mostrar modal.
-      if (res && res.ok) {
-        const modal = new bootstrap.Modal(document.getElementById('modalSuccess'));
-        modal.show();
-        form.reset();
-        setStatus("Mensaje enviado correctamente.");
-      } else {
-        // Si no hay respuesta válida (por CORS), intentamos con mode:'no-cors' como fallback
-        await fetch(SCRIPT_URL, { method: 'POST', body: fd, mode: 'no-cors' });
-        const modal = new bootstrap.Modal(document.getElementById('modalSuccess'));
-        modal.show();
-        form.reset();
-        setStatus("Mensaje enviado correctamente (fallback).");
-      }
-
-    } catch (err) {
-      console.error("Error principal:", err);
-      setStatus("Error al enviar. Intentando fallback...", true);
-
-      // fallback final: enviar por FormSubmit si lo tienes configurado (opcional)
-      try {
-        const fallback = "https://formsubmit.co/jurixsistemsas.contacto@gmail.com";
-        form.setAttribute('action', fallback);
-        form.setAttribute('method', 'POST');
-        form.submit();
-      } catch(e2){
-        console.error("Fallback también falló", e2);
-        alert("No se pudo enviar el mensaje. Intenta nuevamente más tarde.");
-      }
-    } finally {
-      btn.disabled = false;
-      btn.textContent = "Enviar";
-    }
-  });
-
-  // comportamiento del modal cerrar
-  document.getElementById('btnCerrarModalSuccess').addEventListener('click', ()=> {
+  document.getElementById("btnCerrarModalSuccess").addEventListener("click", () => {
     window.location.href = "contacto.html";
   });
-
-  // Si la página llega con ?sent=true (por ejemplo fallback) -> mostrar modal
-  document.addEventListener('DOMContentLoaded', ()=>{
-    const params = new URLSearchParams(window.location.search);
-    if(params.get('sent') === 'true'){
-      const modal = new bootstrap.Modal(document.getElementById('modalSuccess'));
-      modal.show();
-    }
-  });
-
-})();
+});
 </script>
 
 </body>
 </html>
-
-
-
-
