--- a/contacto.html
+++ b/contacto.html
@@ -99,100 +99,47 @@
   <div style="display:grid;grid-template-columns:1fr 360px;gap:22px;margin-top:18px">
 
 <!-- FORMULARIO -->
-    <<!-- ========== FORMULARIO (reemplazar aquí) ========== -->
-<div class="form-card">
-  <form id="contactForm" novalidate>
+    <div class="form-card">
+     <form id="contactForm">
+  <input type="text" name="nombre" id="nombre" placeholder="Tu nombre" required />
+  <input type="email" name="email" id="email" placeholder="Tu correo" required />
+  <textarea name="mensaje" id="mensaje" placeholder="Escribe tu mensaje" required></textarea>
+  <button type="submit">Enviar</button>
+</form>
 
-    <input class="input" type="text" name="nombre" id="nombre" placeholder="Nombre completo" required>
+<p id="statusMsg"></p>
 
-    <!-- nuevo campo: dirección -->
-    <input class="input" type="text" name="direccion" id="direccion" placeholder="Dirección (Calle, ciudad)" />
-
-    <!-- mantenemos email por compatibilidad -->
-    <input class="input" type="email" name="email" id="email" placeholder="Correo electrónico" required>
-
-    <!-- teléfono -->
-    <input class="input" type="text" name="telefono" id="telefono" placeholder="Teléfono / WhatsApp" />
-
-    <!-- comentario / mensaje -->
-    <textarea name="mensaje" id="mensaje" placeholder="Escribe tu comentario o consulta" required></textarea>
-
-    <button id="btnEnviarContacto" type="submit" style="background:#0D3B66;color:#fff;border:none;padding:10px 14px;border-radius:6px;width:100%;">Enviar</button>
-
-    <div id="statusMsg" style="margin-top:10px;font-size:0.95rem;"></div>
-  </form>
-</div>
-
-<!-- ========== SCRIPT DE ENVÍO (reemplazar el script anterior relacionado al form) ========== -->
 <script>
-/* pega aquí la URL de tu WebApp de Apps Script si no está en otra parte */
-const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbx0c2VZMQAoqAeuF3EXLrIH4kZHN8t3Fey-RWv13bY-wRb81E7LlopHwy8hTqk2mB0/exec";
+const scriptURL = "https://script.google.com/macros/s/AKfycbx0c2VZMQAoqAeuF3EXLrIH4kZHN8t3Fey-RWv13bY-wRb81E7LlopHwy8hTqk2mB0/exec";
 
-(function(){
-  const form = document.getElementById('contactForm');
-  const btn  = document.getElementById('btnEnviarContacto');
-  const status = document.getElementById('statusMsg');
+document.getElementById("contactForm").addEventListener("submit", async (e) => {
+  e.preventDefault();
 
-  function setStatus(text, error = false){
-    status.textContent = text;
-    status.style.color = error ? "#b02a37" : "#0d6efd";
+  const data = {
+    nombre: document.getElementById("nombre").value,
+    email: document.getElementById("email").value,
+    mensaje: document.getElementById("mensaje").value
+  };
+
+  const status = document.getElementById("statusMsg");
+  status.innerText = "Enviando...";
+
+  try {
+    const res = await fetch(scriptURL, {
+      method: "POST",
+      mode: "no-cors",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(data)
+    });
+
+    status.innerText = "¡Mensaje enviado con éxito!";
+    document.getElementById("contactForm").reset();
+
+  } catch (err) {
+    status.innerText = "Error al enviar. Intenta nuevamente.";
   }
-
-  function validar(){
-    const nombre = document.getElementById('nombre').value.trim();
-    const email  = document.getElementById('email').value.trim();
-    const mensaje= document.getElementById('mensaje').value.trim();
-    if(!nombre || !email || !mensaje) return false;
-    return true;
-  }
-
-  form.addEventListener('submit', async function(e){
-    e.preventDefault();
-
-    if(!validar()){
-      alert("Por favor completa Nombre, Correo y Mensaje antes de enviar.");
-      return;
-    }
-
-    btn.disabled = true;
-    btn.textContent = "Enviando...";
-    setStatus("Enviando mensaje...");
-
-    // Preparamos datos; mantenemos FormData para compatibilidad con Apps Script
-    const fd = new FormData();
-    fd.append('nombre', document.getElementById('nombre').value.trim());
-    fd.append('email', document.getElementById('email').value.trim());
-    fd.append('direccion', document.getElementById('direccion').value.trim());
-    fd.append('telefono', document.getElementById('telefono').value.trim());
-    fd.append('mensaje', document.getElementById('mensaje').value.trim());
-
-    try {
-      // Enviamos al WebApp (modo no-cors para máxima compatibilidad si tu script no devuelve CORS)
-      await fetch(SCRIPT_URL, {
-        method: 'POST',
-        body: fd,
-        mode: 'no-cors'
-      });
-
-      // asumimos éxito (si tu Apps Script responde con CORS y JSON, podríamos comprobar res.ok)
-      const modal = new bootstrap.Modal(document.getElementById('modalSuccess'));
-      modal.show();
-
-      form.reset();
-      setStatus("Mensaje enviado correctamente.", false);
-
-    } catch (err) {
-      console.error("Error al enviar:", err);
-      setStatus("Error al enviar. Intenta nuevamente.", true);
-      // no forzamos fallback aquí para evitar comportamiento inesperado
-    } finally {
-      btn.disabled = false;
-      btn.textContent = "Enviar";
-    }
-  });
-})();
+});
 </script>
-
 
     </div>
 
