--- a/contacto.html
+++ b/contacto.html
@@ -102,7 +102,9 @@
     <div class="form-card">
      <form id="contactForm">
   <input type="text" name="nombre" id="nombre" placeholder="Tu nombre" required />
+  <input type="text" name="empresa" id="empresa" placeholder="Tu empresa" required />
   <input type="email" name="email" id="email" placeholder="Tu correo" required />
+  <input type="telefono" name="telefono" id="telefono" placeholder="Tu telefono" required />
   <textarea name="mensaje" id="mensaje" placeholder="Escribe tu mensaje" required></textarea>
   <button type="submit">Enviar</button>
 </form>
@@ -117,7 +119,9 @@ document.getElementById("contactForm").addEventListener("submit", async (e) => {
 
   const data = {
     nombre: document.getElementById("nombre").value,
+    nombre: document.getElementById("empresa").value,
     email: document.getElementById("email").value,
+    nombre: document.getElementById("telefono").value,
     mensaje: document.getElementById("mensaje").value
   };
 
