--- a/contacto.html
+++ b/contacto.html
@@ -119,9 +119,9 @@ document.getElementById("contactForm").addEventListener("submit", async (e) => {
 
   const data = {
     nombre: document.getElementById("nombre").value,
-    nombre: document.getElementById("empresa").value,
+    empresa: document.getElementById("empresa").value,
     email: document.getElementById("email").value,
-    nombre: document.getElementById("telefono").value,
+    telefono: document.getElementById("telefono").value,
     mensaje: document.getElementById("mensaje").value
   };
 
