--- a/contacto.html
+++ b/contacto.html
@@ -101,8 +101,8 @@
 <!-- FORMULARIO -->
     <div class="form-card">
      <form id="contactForm">
-  <input type="text" name="nombre" id="nombre" placeholder="Tu nombre" required />
-  <input type="text" name="empresa" id="empresa" placeholder="Tu empresa" required />
+  <input type="nombre" name="nombre" id="nombre" placeholder="Tu nombre" required />
+  <input type="empresa" name="empresa" id="empresa" placeholder="Tu empresa" required />
   <input type="email" name="email" id="email" placeholder="Tu correo" required />
   <input type="telefono" name="telefono" id="telefono" placeholder="Tu telefono" required />
   <textarea name="mensaje" id="mensaje" placeholder="Escribe tu mensaje" required></textarea>
