--- a/contacto.html
+++ b/contacto.html
@@ -101,10 +101,9 @@
 <!-- FORMULARIO -->
     <div class="form-card">
      <form id="contactForm">
-  <!--<input type="nombre" name="nombre" id="nombre" placeholder="Tu nombre" required /> -->
   <input class="input" type="nombre" name="nombre" id="nombre" placeholder="Nombre completo" required>
-  <input type="empresa" name="empresa" id="empresa" placeholder="Tu empresa" required />
-  <input type="email" name="email" id="email" placeholder="Tu correo" required />
+  <input class="input" type="empresa" name="empresa" id="empresa" placeholder="Empresa" />       
+  <input class="input" type="email" name="email" id="email" placeholder="Email" />
   <input type="telefono" name="telefono" id="telefono" placeholder="Tu telefono" required />
   <textarea name="mensaje" id="mensaje" placeholder="Escribe tu mensaje" required></textarea>
   <button type="submit">Enviar</button>
