--- a/contacto.html
+++ b/contacto.html
@@ -104,8 +104,8 @@
   <input class="input" type="nombre" name="nombre" id="nombre" placeholder="Nombre completo" required>
   <input class="input" type="empresa" name="empresa" id="empresa" placeholder="Empresa" />       
   <input class="input" type="email" name="email" id="email" placeholder="Email" />
-  <input type="telefono" name="telefono" id="telefono" placeholder="Tu telefono" required />
-  <textarea name="mensaje" id="mensaje" placeholder="Escribe tu mensaje" required></textarea>
+  <input class="input" type="telefono" name="telefono" id="telefono" placeholder="Telefono" />
+  <textarea name="mensaje" id="mensaje" placeholder="Escribe tu comentario o consulta" required></textarea>    
   <button type="submit">Enviar</button>
 </form>
 
