--- a/contacto.html
+++ b/contacto.html
@@ -105,8 +105,10 @@
   <input class="input" type="empresa" name="empresa" id="empresa" placeholder="Empresa" />       
   <input class="input" type="email" name="email" id="email" placeholder="Email" />
   <input class="input" type="telefono" name="telefono" id="telefono" placeholder="Telefono" />
-  <textarea name="mensaje" id="mensaje" placeholder="Escribe tu comentario o consulta" required></textarea>    
-  <button type="submit">Enviar</button>
+  <textarea name="mensaje" id="mensaje" placeholder="Escribe tu comentario o consulta" required></textarea>
+  <button id="btnEnviarContacto" type="submit" style="background:#0D3B66;color:#fff;border:none;padding:10px 14px;border-radius:6px;width:100%;">Enviar</button>
+    
+  <!-- <button type="submit">Enviar</button> -->
 </form>
 
 <p id="statusMsg"></p>
