--- a/nosotros.html
+++ b/nosotros.html
@@ -197,7 +197,7 @@
     <div class="col-lg-6">
       <h2 style="color:#0D3B66; margin-bottom:14px;">¿Quiénes Somos?</h2>
       <p style="color:#374d63; font-size:15px;">
-        Somos una firma interdisciplinaria en Derecho y Tecnología. Conectamos el mundo jurídico con la automatización, los datos y el cumplimiento normativo; logrando que las organizaciones operen de forma segura, eficiente y con menor riesgo legal.
+        Somos una firma interdisciplinaria en Derecho y Tecnología. Conectamos el mundo jurídico con la ingeniería, las ciencias aplicadas y el cumplimiento normativo; logrando que las organizaciones y personas operen de forma segura, eficiente y satisfaciendo sus necesidades.
       </p>
       <p style="color:#374d63; font-size:15px;">
         Nuestro trabajo se basa en metodologías y estándares internacionales, integrando procesos, políticas corporativas y soluciones técnicas para que la empresa tome decisiones con información real.
