--- a/nosotros.html
+++ b/nosotros.html
@@ -217,14 +217,14 @@
       <div class="p-3 mb-3" style="background:#f9fafc; border-left:4px solid #CDAA6D;">
         <h4 style="margin-bottom:6px; color:#0D3B66;">MISIÓN</h4>
         <p style="margin:0; color:#374d63;">
-          Brindar consultorías especializadas que integren derecho, seguridad de la información, protección de datos y automatización, aplicando estándares y buenas prácticas internacionales.
+          Brindar consultorías especializadas que integren derecho y servicios tecnológicos, aplicando estándares y buenas prácticas internacionales.
         </p>
       </div>
 
       <div class="p-3" style="background:#f9fafc; border-left:4px solid #CDAA6D;">
         <h4 style="margin-bottom:6px; color:#0D3B66;">VISIÓN</h4>
         <p style="margin:0; color:#374d63;">
-          Ser líderes en LegalTech en Colombia y Latinoamérica, referentes en soluciones estratégicas que conectan tecnología, regulación y gobernanza digital. A 2030, consolidarnos como firma de alto impacto.
+          Ser líderes en LegalTech en Colombia y Latinoamérica, referentes en soluciones estratégicas que conectan el derecho, la tecnología, regulación y gobernanza digital. A 2030, consolidarnos como firma de alto impacto.
         </p>
       </div>
       
