--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
         <!-- Right column (illustration) -->
         <div class="col-lg-6 right">
-          <img src="assets/img/hero-illustration.png" alt="Ilustración legal-tech">
+          <img src="assets/img/hero-lcph.png" alt="Ilustración legal-tech">
         </div>
       </div>
     </div>
