--- a/noticias.html
+++ b/noticias.html
@@ -1,1 +1,61 @@
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>JURIX & SISTEM S.A.S. — Noticias</title>
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Main CSS -->
+  <link rel="stylesheet" href="assets/css/style.css" />
+
+  <style>
+    /* Mantenemos los estilos tal cual tu index */
+  </style>
+</head>
+<body>
+
+  <!-- HEADER -->
+  (el mismo header que en el index, completo)
+
+  <!-- CONTENIDO NOTICIA -->
+  <section class="py-5" style="background:#f8f9fa;">
+    <div class="container">
+
+      <h2 class="text-center mb-3" style="color:#0D3B66;">Noticias</h2>
+      <p class="text-center text-muted mb-4">Actualizaciones, anuncios y contenido de valor</p>
+
+      <div class="card shadow-sm p-4" style="border-left:4px solid #CDAA6D;">
+
+        <h3 style="color:#0D3B66;">🎥 Presentamos nuestro primer video corporativo</h3>
+        <p class="text-muted">Publicado el <strong id="fecha"></strong></p>
+
+        <!-- AQUI VA EL VIDEO (te lo coloco cuando me digas opción A, B o C) -->
+        <div id="video-container" class="my-4">
+        </div>
+
+        <p>
+          Este video marca el inicio de una nueva etapa para Jurix & Sistem S.A.S., 
+          donde combinamos el derecho y la tecnología para ofrecer soluciones modernas, 
+          confiables y accesibles para nuestros clientes.
+        </p>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  (el mismo footer del index)
+
+<script>
+  // Fecha automática
+  document.getElementById('fecha').textContent = new Date().toLocaleDateString('es-CO');
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
+</html>
 
