--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
 
           <a class="nav-link" href="clientes.html">Clientes</a>
           <a class="nav-link" href="equipo.html">Nuestro Equipo</a>
+          <a class="nav-link" href="noticias.html">Noticias</a>
           <a class="nav-link" href="contacto.html">Contacto</a>
         </nav>
       </div>
