--- a/noticias.html
+++ b/noticias.html
@@ -216,16 +216,17 @@
     </div>
   </section>
 
-  <!-- FOOTER -->
-  (el mismo footer del index)
+ <!-- FOOTER -->
+  <footer class="site-footer">
+    <div class="container text-center">
+      <p style="margin:0;">Jurix & Sistem S.A.S. — Barranquilla, Colombia | jurixsistemsas@outlook.com - jurixsistemsas.contacto@gmail.com | WhatsApp: +57 3012564208</p>
+      <p style="margin:6px 0 0">© <span id="year"></span> JURIX & SISTEM S.A.S.</p>
+    </div>
+  </footer>
 
-<script>
-  // Fecha automática
-  document.getElementById('fecha').textContent = new Date().toLocaleDateString('es-CO');
-</script>
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
