--- a/noticias.html
+++ b/noticias.html
@@ -8,12 +8,10 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Main CSS (mantén o reemplaza assets/css/style.css con el que te entregué) -->
+  <!-- Main CSS -->
   <link rel="stylesheet" href="assets/css/style.css" />
 
-  <!-- Small header-specific styles to ensure the circle logo, hero full-screen and menu layout -->
   <style>
-    /* Header layout adjustments */
     .header-top {
       background: #000;
       color: #fff;
@@ -27,8 +25,7 @@
       display:flex;
       align-items:center;
       justify-content:center;
-      background: transparent;
-      border: 4px solid rgba(205,170,109,0.95); /* dorado medio */
+      border: 4px solid rgba(205,170,109,0.95);
       box-shadow: 0 6px 18px rgba(0,0,0,0.35);
       overflow:hidden;
       flex-shrink:0;
@@ -36,19 +33,14 @@
     .logo-circle img {
       width:78%;
       height:auto;
-      display:block;
     }
-     /* Titulo principal Jurix & Sistem SAS */
-    .brand-title { line-height:1; }
     .brand-title h1 {
       margin:0;
-      font-size:30px; /* tamaño A */
-      color: #CDAA6D; /* dorado */
+      font-size:30px;
+      color: #CDAA6D;
       font-weight:700;
       letter-spacing:0.6px;
     }
-    
-    /* Subtitulo principal Consultorias */
     .brand-title p { 
       margin:0;
       font-size:14px;
@@ -57,11 +49,9 @@
       margin-top:4px;
       letter-spacing:1px;
     }
-
-    /* Menu row (white bg with blue bottom border) */
     .menu-row {
       background:#fff;
-      border-bottom:3px solid #2E86C1; /* azul TOV */
+      border-bottom:3px solid #2E86C1;
     }
     .menu-row .nav-link {
       color:#000;
@@ -70,163 +60,94 @@
     }
     .menu-row .nav-link:hover {
       color:#2E86C1;
-      background:transparent;
-    }
-
-    /* Hero full-screen */
-    .hero {
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      padding: 40px 0;
-      background: linear-gradient(180deg, #0E2A48 0%, #061628 70%); /* degradado azul petróleo -> azul oscuro */
-      color:#fff;
-    }
-    .hero .left {
-      max-width: 630px;
-    }
-    .hero h2 {
-      font-size:40px;
-      color:#F5F5F5;
-      margin-bottom:12px;
-      line-height:1.05;
-    }
-    .hero p.lead {
-      color: #e6eef6;
-      font-size:16px;
-      margin-bottom:20px;
-    }
-    .btn-primary-cta {
-      background:#CDAA6D;
-      border: 2px solid rgba(205,170,109,0.95);
-      color:#021226;
-      font-weight:700;
-      padding:12px 20px;
-      border-radius:8px;
-    }
-    .btn-primary-cta:hover { background:#b79856; color:#021226; }
-
-    .hero .right img{
-      width:100%;
-      height:auto;
-      border-radius:12px;
-      box-shadow: 0 12px 36px rgba(2,10,24,0.6);
-    }
-
-    /* Cards */
-    .cards { margin-top:26px; display:grid; grid-template-columns:repeat(auto-fit, minmax(210px,1fr)); gap:18px;}
-    .service-card {
-      background:rgba(255,255,255,0.04);
-      border:1px solid rgba(255,255,255,0.06);
-      padding:18px;
-      border-radius:12px;
-      color:#eef6ff;
-      min-height:110px;
-    }
-    .service-card h3 { color:#CDAA6D; margin-bottom:8px; font-size:18px; }
-    .service-card p { color:#dbeaf8; font-size:14px; }
-
-    /* Why choose us */
-    .why { padding:48px 0; background:#fff; color:#222; border-top:1px solid #eef2f6; border-bottom:1px solid #eef2f6; }
-    .why h3 { color: #0D3B66; margin-bottom:14px; }
-
-    /* Footer */
-    .site-footer {
-      background:#000;
-      color:#CDAA6D;
-      padding:22px 0;
-      margin-top:30px;
-    }
-
-    /* Responsive tweaks */
-    @media (max-width:992px) {
-      .brand-row { gap:12px; }
-      .logo-circle { width:76px; height:76px; border-width:3px; }
-      .brand-title h1 { font-size:22px; }
-      .hero h2 { font-size:28px; }
-      .hero { padding:30px 0; }
     }
   </style>
 </head>
 <body>
 
-  <!-- HEADER TOP (logo + title) -->
-  <header class="header-top">
+<header class="header-top">
+  <div class="container">
+    <div class="brand-row">
+      <div class="logo-circle">
+        <img src="assets/img/logo.png" alt="Jurix & Sistem logo">
+      </div>
+      <div class="brand-title">
+        <h1>JURIX & SISTEM S.A.S.</h1>
+        <p>CONSULTORÍAS</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="menu-row">
     <div class="container">
-      <div class="brand-row">
-        <div class="logo-circle">
-          <img src="assets/img/logo.png" alt="Jurix & Sistem logo">
+      <nav class="d-flex justify-content-center align-items-center py-2">
+        <a class="nav-link" href="index.html">Inicio</a>
+        <a class="nav-link" href="nosotros.html">Nosotros</a>
+
+        <div class="nav-item dropdown mx-2">
+          <a class="nav-link dropdown-toggle" href="#" id="serviciosDropdown" role="button" data-bs-toggle="dropdown">Servicios</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="juridicos.html">Jurídicos</a></li>
+            <li><a class="dropdown-item" href="tecnologicos.html">Tecnológicos</a></li>
+          </ul>
         </div>
 
-        <div class="brand-title">
-          <h1>JURIX & SISTEM S.A.S.</h1>
-          <p>CONSULTORÍAS</p>
+        <a class="nav-link" href="clientes.html">Clientes</a>
+        <a class="nav-link" href="equipo.html">Nuestro Equipo</a>
+        <a class="nav-link" href="noticias.html">Noticias</a>
+        <a class="nav-link" href="contacto.html">Contacto</a>
+      </nav>
+    </div>
+  </div>
+</header>
+
+<section class="py-5" style="background:#f8f9fa;">
+  <div class="container">
+    <h2 class="text-center mb-3" style="color:#0D3B66;">Noticias</h2>
+    <p class="text-center text-muted mb-4">Actualizaciones, anuncios y contenido de valor</p>
+
+    <div class="card shadow-sm p-4" style="border-left:4px solid #CDAA6D;">
+
+      <h3 style="color:#0D3B66;">🎥 Presentamos nuestro primer video corporativo</h3>
+      <p class="text-muted">Publicado el <strong id="fecha"></strong></p>
+
+      <!-- VIDEO EMBED -->
+      <div id="video-container" class="my-4">
+        <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;">
+          <iframe 
+            src="https://www.youtube.com/embed/GtQuCeU8itM" 
+            title="Video corporativo Jurix & Sistem"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+            style="position:absolute;top:0;left:0;width:100%;height:100%;">
+          </iframe>
         </div>
       </div>
+
+      <p>
+        Este video marca el inicio de una nueva etapa para Jurix & Sistem S.A.S., 
+        donde combinamos el derecho y la tecnología para ofrecer soluciones modernas, 
+        confiables y accesibles para nuestros clientes.
+      </p>
+
     </div>
+  </div>
+</section>
 
-    <!-- MENU (centered row) -->
-    <div class="menu-row">
-      <div class="container">
-        <nav class="d-flex justify-content-center align-items-center py-2">
-          <a class="nav-link" href="index.html">Inicio</a>
-          <a class="nav-link" href="nosotros.html">Nosotros</a>
+<footer class="site-footer" style="background:#000;color:#CDAA6D;padding:22px 0;margin-top:30px;">
+  <div class="container text-center">
+    <p style="margin:0;">Jurix & Sistem S.A.S. — Barranquilla, Colombia | jurixsistemsas@outlook.com - jurixsistemsas.contacto@gmail.com | WhatsApp: +57 3012564208</p>
+    <p style="margin:6px 0 0">© <span id="year"></span> JURIX & SISTEM S.A.S.</p>
+  </div>
+</footer>
 
-          <!-- Servicios dropdown (simple custom dropdown) -->
-          <div class="nav-item dropdown mx-2">
-            <a class="nav-link dropdown-toggle" href="#" id="serviciosDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Servicios</a>
-            <ul class="dropdown-menu" aria-labelledby="serviciosDropdown">
-              <li><a class="dropdown-item" href="juridicos.html">Jurídicos</a></li>
-              <li><a class="dropdown-item" href="tecnologicos.html">Tecnológicos</a></li>
-            </ul>
-          </div>
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+  document.getElementById('fecha').textContent = new Date().toLocaleDateString('es-CO');
+</script>
 
-          <a class="nav-link" href="clientes.html">Clientes</a>
-          <a class="nav-link" href="equipo.html">Nuestro Equipo</a>
-          <a class="nav-link" href="noticias.html">Noticias</a>
-          <a class="nav-link" href="contacto.html">Contacto</a>
-        </nav>
-      </div>
-    </div>
-  </header>
-
-  <!-- CONTENIDO NOTICIA -->
-  <section class="py-5" style="background:#f8f9fa;">
-    <div class="container">
-
-      <h2 class="text-center mb-3" style="color:#0D3B66;">Noticias</h2>
-      <p class="text-center text-muted mb-4">Actualizaciones, anuncios y contenido de valor</p>
-
-      <div class="card shadow-sm p-4" style="border-left:4px solid #CDAA6D;">
-
-        <h3 style="color:#0D3B66;">🎥 Presentamos nuestro primer video corporativo</h3>
-        <p class="text-muted">Publicado el <strong id="fecha"></strong></p>
-
-        <!-- AQUI VA EL VIDEO (te lo coloco cuando me digas opción A, B o C) -->
-        <div id="video-container" class="my-4">
-        </div>
-
-        <p>
-          Este video marca el inicio de una nueva etapa para Jurix & Sistem S.A.S., 
-          donde combinamos el derecho y la tecnología para ofrecer soluciones modernas, 
-          confiables y accesibles para nuestros clientes.
-        </p>
-
-      </div>
-    </div>
-  </section>
-
- <!-- FOOTER -->
-  <footer class="site-footer">
-    <div class="container text-center">
-      <p style="margin:0;">Jurix & Sistem S.A.S. — Barranquilla, Colombia | jurixsistemsas@outlook.com - jurixsistemsas.contacto@gmail.com | WhatsApp: +57 3012564208</p>
-      <p style="margin:6px 0 0">© <span id="year"></span> JURIX & SISTEM S.A.S.</p>
-    </div>
-  </footer>
-
-  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
-
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
