--- a/index.html
+++ b/index.html
@@ -240,6 +240,24 @@
     </div>
   </section>
 
+  <section class="youtube-announcement" style="padding: 40px 20px; background: #f5f8ff; border-radius: 12px; margin-top: 40px; text-align: center;">
+    <h2 style="font-size: 28px; font-weight: 700; margin-bottom: 10px; color: #1a1a1a;">
+        📺 ¡Ahora estamos en YouTube!
+    </h2>
+
+    <p style="font-size: 18px; max-width: 700px; margin: 0 auto 20px auto; color: #333;">
+        Lanzamos nuestro canal oficial para compartir contenido sobre derecho digital, tecnología, protección de datos y mucho más.
+        <br><br>
+        <strong>Te invitamos a seguirnos, compartir nuestro canal y regalarnos un like de apoyo en los videos.</strong>
+    </p>
+
+    <a href="https://www.youtube.com/@JurixSistemSAS" 
+       target="_blank" 
+       style="display: inline-block; padding: 15px 30px; font-size: 18px; background: #ff0000; color: white; border-radius: 8px; text-decoration: none; font-weight: 600;">
+        🔔 Visitar canal de YouTube
+    </a>
+</section>
+
   <!-- WHY CHOOSE US -->
   <section class="why">
     <div class="container">
