--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     </h2>
 
     <p style="font-size: 18px; max-width: 700px; margin: 0 auto 20px auto; color: #333;">
-        Lanzamos nuestro canal oficial para compartir contenido sobre derecho digital, tecnología, protección de datos y mucho más.
+        Lanzamos nuestro canal oficial para compartir contenido sobre derecho, tecnología y mucho más.
         <br><br>
         <strong>Te invitamos a seguirnos, compartir nuestro canal y regalarnos un like de apoyo en los videos.</strong>
     </p>
